# IMAGETOTEXT-SS

./: .gitignore  CMakeLists.txt  LICENSE  PRD.md  README.md
src/: app.manifest  capture.cpp  capture.h  clipboard.cpp  clipboard.h  config.cpp  config.h  main.cpp  ocr.cpp  ocr.h  overlay.cpp  overlay.h  preview.cpp  preview.h  resource.rc  settings.cpp  settings.h  winutil.h
tools/: package.ps1
